@@ -1,3 +1,6 @@
+# VIM temporary files:
+*.swp
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
