@@ -13,7 +13,17 @@ Refactored merge() to take list of Bib() objects as argument (optional).
 Added color syntax to filter_field() dialog.
 Added color syntax to merge() dialog.
 
+
 *****  Di 18. Dez 15:27:46 CET 2018  *****
 
 Implemented edit() to manually edit the bibmanager database.
+
+
+*****  Fri Dec 21 19:46:20 CLT 2018  *****
+
+Implemented search() to querry into bibmanager database by author,
+year, or keywords in title.
+Added documentation to Bib.__contains__().
+
+*****
 
